# Armon.jl

./: .gitignore  CITATION.bib  LICENSE  Project.toml  README.md
.github/: CI.yml
.github/workflows/: CI.yml  documentation.yml
docs/: Manifest.toml  Project.toml  make.jl
docs/src/: index.md
ext/: ArmonAMDGPU.jl  ArmonCUDA.jl  ArmonKokkos.jl  ArmonNVTX.jl  ArmonOneAPI.jl
lib/armon_cpp/: CMakeLists.txt  armon.cpp  armon.h  indexing.h  limiters.h  utils.h
lib/armon_cpp/kernels/: acoustic.cpp  bizarrium_eos.cpp  boundary_conditions.cpp  cell_update.cpp  euler_projection.cpp  halo_exchange.cpp  init_test.cpp  parallel_kernels.h  perfect_gas_eos.cpp  reductions.cpp
src/: Armon.jl  axis_splitting.jl  cpp_interface.jl  data.jl  domain_ranges.jl  generic_kernel.jl  halo_exchange.jl  io.jl  kernels.jl  limiters.jl  logging.jl  numa_utils.jl  parameters.jl  profiling.jl  projection_schemes.jl  reductions.jl  riemann_schemes.jl  solver.jl  solver_state.jl  tests.jl  timing_macros.jl  utils.jl  vtune_lib.jl
src/blocking/: block_grid.jl  blocking.jl  blocks.jl  interface.jl  workload_distribution.jl
test/: Project.toml  analytical_tests.jl  blocking.jl  code_quality.jl  conservation.jl  convergence.jl  domains.jl  gpu.jl  hist_kernels_perfs.plot  kernels.jl  kernels_perf.jl  kokkos.jl  logging.jl  main.jl  makefile  mpi.jl  numa.jl  performance.jl  runtests.jl  stencil_coverage.jl  type_stability.jl
test/performance_data/: create_performance_reference.jl  performance_cpu.toml  performance_functions.jl  performance_gpu.toml
test/reference_data/: create_references.jl  ref_Bizarrium_32bits.csv  ref_Bizarrium_64bits.csv  ref_Sedov_32bits.csv  ref_Sedov_64bits.csv  ref_Sod_32bits.csv  ref_Sod_64bits.csv  ref_Sod_circ_32bits.csv  ref_Sod_circ_64bits.csv  ref_Sod_y_32bits.csv  ref_Sod_y_64bits.csv  reference_functions.jl
